<resources>
    <string name="app_name">Schulplaner</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="timetable_menu_name">Timetable</string>
    <string name="calendar_menu_name">Calendar</string>
    <string name="main_menu_label">Schul-App</string>
    <string name="action_edit">Edit</string>
    <string name="action_new">New</string>
    <string name="action_remove">Remove</string>
    <string name="appointment_status_part1">Es sind </string>
    <string name="appointment_status_part2"> Termine vorhanden!</string>
    <string name="no_appointments">Es sind keine Termine vorhanden!</string>
    <string name="title_activity_add_date">AddDate</string>
</resources>
