<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <Button
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:text="@string/timetable_menu_name"
        android:id="@+id/menu_button_timetable"
        android:layout_gravity="center_vertical"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="123dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:text="@string/calendar_menu_name"
        android:id="@+id/menu_button_calendar"
        android:layout_gravity="center_vertical"
        android:layout_below="@+id/menu_button_timetable"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="102dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/main_menu_label"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />
</RelativeLayout>
